<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_margin="40dp"
        android:id="@+id/txt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/About_Us"
        android:textColor="@color/app_colour"
        android:textSize="25sp"
        android:textStyle="bold"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:src="@drawable/img_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="90dp">
        <TextView
            android:text="@string/Describe"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="40dp"
        android:layout_height="20dp">
        <TextView
            android:textSize="19sp"
            android:textColor="@color/black"
            android:text="@string/Describe2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="40dp"
        android:layout_height="100dp">
        <TextView
            android:textSize="19sp"
            android:textColor="@color/black"
            android:text="@string/Describe3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>





</LinearLayout>